Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31249

Broken code model on project using CMake presets and a cross-compilation setup

XMLWordPrintable

    • Linux/X11, macOS
    • 6e7988894 (14.0)

      I have tried building a Hello World project on a Arm64 Linux setup with a cross-compilation Windows X86_64 target using the Wine64 Emulator.

      I have used the Release llvm-mingw 20231128 with LLVM 17.0.6 ยท mstorsjo/llvm-mingw (github.com) cross-compiler toolchain.

      The project compiles and runs, but the code model is broken:

      All the project files are attached to the ticket.

        1. CMakeLists.txt
          0.4 kB
        2. CMakePresets.json
          0.4 kB
        3. llvm-mingw.cmake
          3 kB
        4. main.cpp
          0.4 kB
        5. qtcreator14-presets-crosscomipler-ok.webp
          162 kB
        6. qtcreator14-presets-crosscompiler-bad-codemodel.webp
          48 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cadam Cristian Adam
            cadam Cristian Adam
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes